--- a/src/index.css
+++ b/src/index.css
@@ -3,3 +3,21 @@ body {
     "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
 }
+
+.watch-list-button {
+  font-size: 14px;
+  padding: 8px 12px;
+  background-color: #f5f5f5;
+  color: #333;
+  border: 1px solid #ccc;
+}
+
+.watch-list-button.add {
+  background-color: #4caf50;
+  color: #fff;
+}
+
+.watch-list-button.remove {
+  background-color: #f44336;
+  color: #fff;
+}
